--- a/package.json
+++ b/package.json
@@ -9,6 +9,6 @@
   },
   "dependencies": {
     "astro": "^3.0.0",
-    "astro-decap-cms-oauth": "^0.5.1"
+    "astro-decap-cms-oauth": "0.5.1"
   }
 }
