--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
-OAUTH_GITHUB_CLIENT_ID=your_github_client_id_here
-OAUTH_GITHUB_CLIENT_SECRET=your_github_client_secret_here
+OAUTH_GITHUB_CLIENT_ID=Ov23li7iI0wtmoBRfgqw
+OAUTH_GITHUB_CLIENT_SECRET=0a7737b90c833071bc776cedcee79b5905fdc07e
+
+"Trigger deploy"
