--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "start": "astro preview"
   },
   "dependencies": {
-    "astro": "^5.0.0",  
+    "astro": "^5.0.0",
     "astro-decap-cms-oauth": "^0.5.1"
+  },
+  "devDependencies": {
+    "@astrojs/vercel": "^3.0.0"
   }
 }
